--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sorting-visualizer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mustafasencer.github.io/Sorting-Visualizer-Tutorial/",
   "dependencies": {
     "bootstrap": "^4.4.1",
     "react": "^16.10.2",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
